# easylog

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp
include/: easylog.hpp
include/easylog/: appender.hpp  record.hpp
include/util/: concurrentqueue.h  meta_string.hpp  time_util.hpp  type_traits.h
src/benchmark/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt
